# This file is not the actual Makefile, as we do not use Automake for
# our project. The purpose of this file is to instruct autoreconf
# to include the setup directory.
#
# Note: ./configure generates the Makefile from Makefile.in, but
# not from this Makefile.am.

ACLOCAL_AMFLAGS = -I setup --install
