opam-version: "2.0"
authors: "Julia Lawall et. al."
maintainer: "Thierry.Martinez@inria.fr"
bug-reports: "cocci@systeme.lip6.fr"
homepage: "http://coccinelle.lip6.fr/"
dev-repo: "git://github.com/coccinelle/coccinelle"
license: "GPL"
build: [
  ["./autogen"]
  ["./configure" "--enable-release" "--enable-ocaml" "--prefix" prefix]
  [make "clean"]
  [make "all.opt"]
]
install: [
  [make "install"]
]
remove: [
  ["rm" "-f"  "%{prefix}%/bin/spatch"]
  ["rm" "-f"  "%{prefix}%/bin/spatch.opt"]
  ["rm" "-f"  "%{prefix}%/bin/pycocci"]
  ["rm" "-rf" "%{prefix}%/lib/coccinelle"]
  ["rm" "-f"  "%{prefix}%/share/man/man1/spatch.1"]
  ["rm" "-f"  "%{prefix}%/share/man/man1/pycocci.1"]
  ["rm" "-f"  "%{prefix}%/share/man/man3/Coccilib.3cocci"]
]
depends: [
  "ocaml"
  "menhir"
  "ocamlfind"
  "pcre"
  "conf-pkg-config"
  "conf-python-3-dev"
  "conf-autoconf"
  "parmap"
  "num"
]
synopsis: "Coccinelle is a C source code matching and transformation engine"
description: """
Coccinelle provides the language SmPL (Semantic Patch Language) for specifying
desired matches and transformations in C code."""
flags: light-uninstall
