# This is a makefile that is not used by this project,
# except for one purpose only:
#
# to all automake -ac in the root directory to (re)generate
# the files install-sh and missing in the setup subdirectory.
#
# The following files (with respect to the top directory)
# have been included in order not to have a dependency on
# automake:
#
# * setup/{Makefile.am, Makefile.in, install-sh, missing}
# * configure
# * Makefile.am
#
# Note: Makefile.in in the top directory is not generated
# from Makefile.am in the top directory! That Makefile.in
# is the official source file, and that Makefile.am is a
# placeholder to fool automake (which we do not really use).

all:
	echo "dummy makefile, do not use"
