opam-version: "2.0"
maintainer: "Thierry Martinez <martinez@nsup.org>"
authors: "Thierry Martinez <martinez@nsup.org>"
homepage: "https://github.com/thierry-martinez/stdcompat"
bug-reports: "https://github.com/thierry-martinez/stdcompat/issues"
license: "BSD"
dev-repo: "git+https://github.com/thierry-martinez/stdcompat.git"
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: [make "uninstall"]
depopts: [ "result" "seq" "uchar" ]
synopsis: "Compatibility module for OCaml standard library"
description: "Compatibility module for OCaml standard library allowing programs to use some recent additions to the OCaml standard library while preserving the ability to be compiled on former versions of OCaml."
depends: [
  "ocaml" {>= "3.07" & < "4.09.0"}
]
